--- a/package.json
+++ b/package.json
@@ -9,9 +9,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.23.0",
-  "dependencies": {
-    "@prisma/client": "^7.3.0",
-    "prisma": "^7.3.0"
-  }
+  "packageManager": "pnpm@10.23.0"
 }
